in messageItemBefore(), in the case that there is no current item and starting from the deepest item, make sure that deepest item has a parent else there will be a crash.

BUG: 264153
FIXED-IN: 4.8.0